{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 116,
  "lineage": "7ffa4f5e-e23e-6128-3eab-b82d739463d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:route-table/rtb-0b336abc98a4be7bb",
            "default_route_table_id": "rtb-0b336abc98a4be7bb",
            "id": "rtb-0b336abc98a4be7bb",
            "owner_id": "451986522825",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03856e157ea800b75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sdwan_igw",
            "aws_vpc.cisco_sdwan_transit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c8k_public_ip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f78d721bde3138df",
            "association_id": "eipassoc-0e11667218780978b",
            "domain": "vpc",
            "id": "eipalloc-0f78d721bde3138df",
            "instance": "i-0124572ec2a3b8291",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-03c56417767acd918",
            "private_dns": "ip-10-40-0-13.ap-southeast-1.compute.internal",
            "private_ip": "10.40.0.13",
            "public_dns": "ec2-18-138-1-30.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.138.1.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.c8kv-1",
            "aws_network_interface.wan_c8k_1",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_1",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "c8k_public_ip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039e354a6a8a30329",
            "association_id": "eipassoc-063782d75c26dc0a0",
            "domain": "vpc",
            "id": "eipalloc-039e354a6a8a30329",
            "instance": "i-098608bf723ab9530",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-08ab5beedc367bc91",
            "private_dns": "ip-10-40-0-41.ap-southeast-1.compute.internal",
            "private_ip": "10.40.0.41",
            "public_dns": "ec2-3-1-32-219.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.32.219",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.c8kv-2",
            "aws_network_interface.wan_c8k_2",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_2",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c8kv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ea5ea2ee0dbff12",
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:instance/i-0124572ec2a3b8291",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0124572ec2a3b8291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-03c56417767acd918"
              }
            ],
            "primary_network_interface_id": "eni-03c56417767acd918",
            "private_dns": "ip-10-40-0-13.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.0.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0115e5c4ca3263184",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0666c88abfc9681de",
            "tags": {
              "Name": "c8000v_SDWAN_1"
            },
            "tags_all": {
              "Name": "c8000v_SDWAN_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d87bbfee3376b42b"
            ]
          },
          "dependencies": [
            "aws_network_interface.wan_c8k_1",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_1",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "c8kv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ea5ea2ee0dbff12",
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:instance/i-098608bf723ab9530",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098608bf723ab9530",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5n.large",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08ab5beedc367bc91"
              }
            ],
            "primary_network_interface_id": "eni-08ab5beedc367bc91",
            "private_dns": "ip-10-40-0-41.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.40.0.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d4df9465ccab81e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a57b4effc78986e",
            "tags": {
              "Name": "c8000v_SDWAN_2"
            },
            "tags_all": {
              "Name": "c8000v_SDWAN_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d87bbfee3376b42b"
            ]
          },
          "dependencies": [
            "aws_network_interface.wan_c8k_2",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_2",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sdwan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:internet-gateway/igw-03856e157ea800b75",
            "id": "igw-03856e157ea800b75",
            "owner_id": "451986522825",
            "tags": {
              "Name": "sdwan_igw"
            },
            "tags_all": {
              "Name": "sdwan_igw"
            },
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "lan_c8k_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:network-interface/eni-07845ab2ece05d9a8",
            "attachment": [
              {
                "attachment_id": "eni-attach-00bdeb8518383238b",
                "device_index": 1,
                "instance": "i-0124572ec2a3b8291"
              }
            ],
            "id": "eni-07845ab2ece05d9a8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:a6:2c:1f:ef:7a",
            "owner_id": "451986522825",
            "private_ip": "10.40.0.139",
            "private_ip_list": [
              "10.40.0.139"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.40.0.139"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c91266522889fa7d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049a7c8631d6185ba"
          },
          "dependencies": [
            "aws_instance.c8kv-1",
            "aws_network_interface.wan_c8k_1",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.lan_subnet_1",
            "aws_subnet.wan_subnet_1",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "lan_c8k_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:network-interface/eni-01a69ea82e4374549",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c583edc7bc25e077",
                "device_index": 1,
                "instance": "i-098608bf723ab9530"
              }
            ],
            "id": "eni-01a69ea82e4374549",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0b:f4:53:11:d8",
            "owner_id": "451986522825",
            "private_ip": "10.40.0.170",
            "private_ip_list": [
              "10.40.0.170"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.40.0.170"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c91266522889fa7d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03575c8f8c1f93a1a"
          },
          "dependencies": [
            "aws_instance.c8kv-2",
            "aws_network_interface.wan_c8k_2",
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.lan_subnet_2",
            "aws_subnet.wan_subnet_2",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wan_c8k_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:network-interface/eni-03c56417767acd918",
            "id": "eni-03c56417767acd918",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:1c:31:79:d6:6e",
            "owner_id": "451986522825",
            "private_ip": "10.40.0.13",
            "private_ip_list": [
              "10.40.0.13"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.40.0.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d87bbfee3376b42b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0666c88abfc9681de"
          },
          "dependencies": [
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_1",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "wan_c8k_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:network-interface/eni-08ab5beedc367bc91",
            "id": "eni-08ab5beedc367bc91",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:98:7c:78:78:e6",
            "owner_id": "451986522825",
            "private_ip": "10.40.0.41",
            "private_ip_list": [
              "10.40.0.41"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.40.0.41"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d87bbfee3376b42b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08a57b4effc78986e"
          },
          "dependencies": [
            "aws_security_group.sg_sdwan_wan",
            "aws_subnet.wan_subnet_2",
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_sdwan_wan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:security-group/sg-0d87bbfee3376b42b",
            "description": "Allow SDWAN inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d87bbfee3376b42b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_sdwan_wan",
            "name_prefix": "",
            "owner_id": "451986522825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_sdwan_wan"
            },
            "tags_all": {
              "Name": "sg_sdwan_wan"
            },
            "timeouts": null,
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lan_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:subnet/subnet-049a7c8631d6185ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.40.0.128/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a7c8631d6185ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451986522825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lan_subnet_1"
            },
            "tags_all": {
              "Name": "lan_subnet_1"
            },
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lan_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:subnet/subnet-03575c8f8c1f93a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.40.0.160/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03575c8f8c1f93a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451986522825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lan_subnet_2"
            },
            "tags_all": {
              "Name": "lan_subnet_2"
            },
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wan_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:subnet/subnet-0666c88abfc9681de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.40.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0666c88abfc9681de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451986522825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wan_subnet_1"
            },
            "tags_all": {
              "Name": "wan_subnet_1"
            },
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wan_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:subnet/subnet-08a57b4effc78986e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.40.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a57b4effc78986e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "451986522825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wan_subnet_1"
            },
            "tags_all": {
              "Name": "wan_subnet_1"
            },
            "vpc_id": "vpc-003da044ba0362b5d"
          },
          "dependencies": [
            "aws_vpc.cisco_sdwan_transit_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cisco_sdwan_transit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:451986522825:vpc/vpc-003da044ba0362b5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/24",
            "default_network_acl_id": "acl-0568575a18ba06e2d",
            "default_route_table_id": "rtb-0b336abc98a4be7bb",
            "default_security_group_id": "sg-0c91266522889fa7d",
            "dhcp_options_id": "dopt-3d22445a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003da044ba0362b5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b336abc98a4be7bb",
            "owner_id": "451986522825",
            "tags": {
              "Name": "cisco_sdwan_transit_vpc"
            },
            "tags_all": {
              "Name": "cisco_sdwan_transit_vpc"
            }
          }
        }
      ]
    }
  ]
}